--- a/.github/workflows/cleaning.yml
+++ b/.github/workflows/cleaning.yml
@@ -2,8 +2,10 @@ name: Company Cleaning Alert
 
 on:
   schedule:
-    # 월~금 오전 9시 (한국시간)
-    - cron: "0 0 * * 1-5"
+    # 오전 10:30 (한국시간, UTC+9)
+    - cron: "30 1 * * 1-5"
+    # 오후 5:00 (한국시간, UTC+9)
+    - cron: "0 8 * * 1-5"
   workflow_dispatch:
 
 jobs:
@@ -11,10 +13,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-node@v4
         with:
           node-version: 18
-      - run: node send.js
+
+      - name: Send cleaning message
+        run: node send.js
         env:
           BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
           CHAT_ID: ${{ secrets.CHAT_ID }}
