--- a/.github/workflows/cleaning.yml
+++ b/.github/workflows/cleaning.yml
@@ -4,6 +4,7 @@ on:
   schedule:
     # 오전 10:30 (한국시간, UTC+9)
     - cron: "30 1 * * 1-5"
+    - cron: "1 2 * * 1-5"   # 🔥 11:01 테스트용
     # 오후 5:00 (한국시간, UTC+9)
     - cron: "0 8 * * 1-5"
   workflow_dispatch:
