--- a/.github/workflows/cleaning.yml
+++ b/.github/workflows/cleaning.yml
@@ -2,12 +2,7 @@ name: Company Cleaning Alert
 
 on:
   schedule:
-    # 오전 10:30 (한국시간, UTC+9)
-    - cron: "30 1 * * 1-5"
-    - cron: "55 1 * * 1-5"
-    - cron: "0 2 * * 1-5"
-    # 오후 5:00 (한국시간, UTC+9)
-    - cron: "0 8 * * 1-5"
+    - cron: "3 2 * * 1-5"  # 🔥 오전 11:03 (KST)
   workflow_dispatch:
 
 jobs:
