--- a/.github/workflows/cleaning.yml
+++ b/.github/workflows/cleaning.yml
@@ -3,6 +3,7 @@ name: Company Cleaning Alert
 on:
   schedule:
     - cron: "7 2 * * 1-5"   # 🔥 오전 11:07 (KST)
+    - cron: "12 2 * * 1-5"  # 🔥 11:12 테스트
   workflow_dispatch:
 
 jobs:
